Bug 1709634 - Fix -moz-accent-color on macOS. r=mstange,mac-reviewers

When I initially implemented it for GTK, I just followed the Highlight color
everywhere, but on macOS it makes of course a lot of sense to use
NSColor.controlAccentColor.

Differential Revision: https://phabricator.services.mozilla.com/D114430